# llm-server-windows

./: .gitignore  AGENTS.md  BINARY-SETUP.md  LICENSE-WINDOWS  README-WINDOWS.md  README.md  WINDOWS_AI_TUNE_COMPATIBILITY.md  benchmark-ai-tune.py  check_dlls.py  debug_linux.py  download_any_gguf.py  entry_points.txt  install-windows.bat  install.sh  llm-opencode  llm-server  llm-server-gui  llm-server-update.py  llm-server-windows.bat  llm-server-windows.py  pyproject.toml  requirements-windows.txt  test_direct_run.py  validate_final.py  validate_windows.py  verify_syntax.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: labeler.yml  lint.yml  shellcheck.yml  test.yml
docs/: 20260413-WINDOWS_PORT_ACTION_PLAN.md
examples/systemd/: llm-server.service
opencode/: start-opencode.sh  sync-opencode-model.sh
